--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-   <h1>Andrei</h1> 
+    <div class="navbar">
+        <ul class="nav-each">
+            <li>About me</li>
+            <li>Contact</li>
+            <li>My Projects</li>
+        </ul>
+
+    </div>
+    <div class="box">
+        <img src="cat1.jpg" alt="gato" class="box-img">
+        <h1>Florinel Alexandru Tanase</h1>
+        <h5>Nimic Interesant</h5>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, incidunt?</p>
+
+        <ul>
+            <li><a href="#"><i  class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+        </ul>
+    </div>
+   
+
 </body>
 </html>
