--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="navbar">
-        <ul class="nav-each">
-            <li>About me</li>
-            <li>Contact</li>
-            <li>My Projects</li>
-        </ul>
+    <header class="container topBotomBordersOut">
+        <img src="logo.jpeg" alt="logo" class="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#" class="lks">About me</a></li>
+                <li><a href="#" class="lks">My Projects</a></li>
+                <li><a href="#" class="lks">Contact</a></li>
+            </ul>
+        </nav>
+       <button class="btn">Send a direct message</button>
+    </header>
 
-    </div>
+
+
     <div class="box">
         <img src="cat1.jpg" alt="gato" class="box-img">
         <h1>Florinel Alexandru Tanase</h1>
