--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="box">
-        <img src="cat1.jpg" alt="gato" class="box-img">
+        <img src="eu.png" alt="gato" class="box-img">
         <h1>Florinel Alexandru Tanase</h1>
         <h5>Nimic Interesant</h5>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, incidunt?</p>
